--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "fs": "0.0.1-security",
     "watson-developer-cloud": "^3.0.4"
   },
   "proxy": "http://localhost:3003"
